# modeling_climate_change

./: .gitignore  Kalman_Filter.ipynb  Kalman_Filter_2.ipynb  README.md  arima_models.ipynb  data_cleaning.ipynb  data_cleaning.py  data_cleaning_2.py  gmm.ipynb  paper_draft.tex  pyproject.toml  seasonal_time_series.ipynb  todo.md
datasets/: gt_data_filtered.npy
datasets/Volatiles and Volcanoes Dataset/: Volatile emissions-Table 1.csv  Volcano Locations-Table 1.csv
presentation/: demo.aux  demo.fdb_latexmk  demo.fls  demo.nav  demo.tex
presentation/styles/: beamerouterthemeflux.sty
tex_dir/: paper_draft.aux  paper_draft.bbl  paper_draft.blg  paper_draft.fdb_latexmk  paper_draft.fls  paper_draft.out  paper_draft.tex  refs.bib
