[project]
name = "modeling-climate-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
